# backendv5

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  environment.yml  pyproject.toml  pytest.ini  run_tests.py  run_tests.sh  test_integration.py  test_jwt_auth.py  test_jwt_only.py  test_permission_middleware.py  test_session_management.py  test_tenant_context.py  test_tenant_membership_validation.py  test_tenant_switching.py  test_tenant_validation.py  test_user_endpoints.py
alembic/: env.py
alembic/versions/: 4f9ecd6a89db_add_document_system_knowledge_graph_and_.py  7a44543fbf7f_add_sequence_number_to_messages.py  9c9483fa7130_initial_migration.py  f51e3c6afc63_remove_vector_memory_tables_keep_only_.py  fab6d0110918_add_permission_and_role_system.py
docs/: CONCEPT_SUMMARY.md  DEVELOPMENT_ROADMAP.md  DocumentationGuide.md  IMPLEMENTATION_ROADMAP.md  Muster.md  QUICK_START.md  README.md  SECURITY_REQUIREMENTS.md
docs/api/: documentation-guide.md
docs/architecture/: LANGGRAPH_INTEGRATION.md  PLATFORM_ARCHITECTURE.md  authentik-integration.md
docs/core/: context-management.md
docs/database/: DATABASE_MODELS_V5_COMPLETE.md
docs/deployment/: documentation.md
docs/development/: code-documentation.md
docs/testing/: authentik-integration-guide.md  authentik-integration.md  documentation.md
scripts/: check_db.py  create_db.py  fix_indexes.py  get_authentik_token.py  manual_test_authentik.py  quick_test_authentik.py  remove_bad_indexes.py  seed_permissions.py  test_authentik_connection.py
src/: main.py
src/agents/: __init__.py  context.py  defaults.py  events.py  exceptions.py  executor.py  loader.py  manager.py  nodes.py
src/api/: admin.py
src/core/: config.py  context.py
src/services/: team_service.py
taskrun/: issues.md  next-task-auth.md  next-task-logic.md  sprint-200-overview.md  task-100-foundation-authentik-integration.md  task-110-auth-middleware-dependencies.md  task-120-device-authentication-system.md  task-130-permission-authorization-system.md  task-140-user-tenant-management.md  task-150-websocket-authentication.md  task-200-teams-crud-api.md  task-201-agent-system-foundation.md  task-202-conversation-agent-integration.md  task-203-websocket-streaming-implementation.md  task-204-llm-provider-abstraction.md  task-205-short-term-memory-system.md  task-206-conversation-checkpoints.md  task-207-basic-tenant-settings-api.md  task-208-conversation-ui-components.md  taskrun.md
taskrun/Completed/: next-task-auth.md  sprint-110-definition-of-done-assessment.md  task-001-pytest-framework-setup.md  task-100-foundation-authentik-integration.md  task-110-auth-middleware-dependencies.md  task-111-completion-summary.md  (+15 more)
tests/: README.md  conftest.py  note.md  test_all_repositories.py  test_repositories.py
tests/unit/: test_main.py  (+1 more)
(+254 files in other folders)
